<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/form_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:textAlignment="center"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".FormActivity">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        app:helperTextTextColor="@android:color/holo_red_dark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hike_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:lines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        app:helperTextTextColor="@android:color/holo_red_dark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hike_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/location"
                            android:inputType="text"
                            android:lines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        app:helperTextTextColor="@android:color/holo_red_dark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hike_length"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/length"
                            android:inputType="text"
                            android:lines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        app:helperTextTextColor="@android:color/holo_red_dark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hike_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/desc"
                            android:inputType="text"
                            android:lines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        app:helperTextTextColor="@android:color/holo_red_dark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hike_guide"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/guide"
                            android:inputType="text"
                            android:lines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        app:helperTextTextColor="@android:color/holo_red_dark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hike_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/date"
                            android:inputType="text"
                            android:focusable="false"
                            android:longClickable="false"
                            android:lines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        android:text="Parking Available" />

                    <RadioGroup
                        android:id="@+id/hike_parking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/parking_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Yes" />

                        <RadioButton
                            android:id="@+id/parking_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="No" />
                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        android:text="Difficulty" />

                    <RadioGroup
                        android:id="@+id/hike_difficulty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/diff_normal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Normal" />

                        <RadioButton
                            android:id="@+id/diff_hard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Hard" />

                    </RadioGroup>

                    <Button
                        android:id="@+id/delete_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/red"
                        android:text="Delete" />

                    <Button
                        android:id="@+id/confirm_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Confirm" />


                </LinearLayout>
            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>